--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="employee">employee</string>
     <string name="company">company</string>
+    <string name="title_activity_basic">BasicActivity</string>
 </resources>
